--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background: #eff4fd;
+    background: #feffff;
     position: relative;
 }
 
 nav{
     display: flex;
-    width: 84%;
+    width: 80%;
     margin: auto;
     padding: 20px 0;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .logo{
@@ -132,7 +133,7 @@ span{
     width: 45%;
     height: 80%;
     position:fixed;
-    top: 25%;
+    top: 2%;
     right: 10px;
 }
 .ima img{
